# AeroCodex

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATA_MANIFEST.toml  DEPLOY_AGENT_PROMPT.md  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFEST.md  NOTICE  README.md  SECURITY.md  SHA256SUMS.txt  SUPPORT.md
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  model_admission.yml  validation_gap.yml
.github/workflows/: beta1-package.yml  ci.yml
biosim-rs/: README.md
checksums/: SHA256SUMS
crates/aero-codex/: Cargo.toml
crates/aero-codex-aerodynamics/: Cargo.toml
crates/aero-codex-agent-cli/: Cargo.toml
crates/aero-codex-agent-cli/src/: main.rs
crates/aero-codex-agent-core/: Cargo.toml
crates/aero-codex-agent-core/src/: cvt.rs  error.rs  ids.rs  lib.rs  retrieval.rs  safety.rs  tool.rs  trace.rs
crates/aero-codex-agent-index/: Cargo.toml
crates/aero-codex-agent-registry/: Cargo.toml
crates/aero-codex-agent-retrieval/: Cargo.toml
crates/aero-codex-agent-schema/: Cargo.toml
crates/aero-codex-agent-schema/src/: lib.rs
crates/aero-codex-agent-server/: Cargo.toml
crates/aero-codex-agent-tools/: Cargo.toml
crates/aero-codex-agent-trace/: Cargo.toml
crates/aero-codex-astrodynamics/: Cargo.toml
crates/aero-codex-atmosphere/: Cargo.toml
crates/aero-codex-atmosphere/src/: lib.rs
crates/aero-codex-bioregen/: Cargo.toml
crates/aero-codex-cli/: Cargo.toml
crates/aero-codex-cli/src/: main.rs
crates/aero-codex-cli/tests/: cli.rs
crates/aero-codex-constants/: Cargo.toml
crates/aero-codex-core/: Cargo.toml
crates/aero-codex-data/: Cargo.toml
crates/aero-codex-flight-dynamics/: Cargo.toml
crates/aero-codex-gasdynamics/: Cargo.toml
crates/aero-codex-heat-transfer/: Cargo.toml
crates/aero-codex-heat-transfer/src/: lib.rs
crates/aero-codex-macros/: Cargo.toml
crates/aero-codex-numerics/: Cargo.toml
crates/aero-codex-propulsion/: Cargo.toml
crates/aero-codex-structures/: Cargo.toml
crates/aero-codex-thermo/: Cargo.toml
crates/aero-codex-units/: Cargo.toml
crates/aero-codex-validation/: Cargo.toml
crates/aero-codex-validation/src/: lib.rs
crates/aero-codex/src/: lib.rs
data-governance/: DATA_POLICY.md  DATA_REGISTRY.yaml
docs/: 100_PERCENT_RUST_POLICY.md  AGENTIC_OPTIMIZATION_PLAN.md  ARCHITECTURE.md  ASTRODYNAMICS_PLAN.md  BIOREGENERATIVE_LIFE_SUPPORT_PLAN.md  CATEGORY_ADMISSION_PLAN.md  CERTIFICATION_CAVEAT.md  DATA_GOVERNANCE.md  DEPENDENCY_POLICY.md  FOUNDATION_SOURCE.md  MILESTONES.md  POST_1_0_LONG_RANGE_PLAN.md  RESEARCH_AND_SOURCE_VERIFICATION_PLAN.md  ROADMAP.md  SESSION_DECISIONS_0_001.md  VERIFICATION_AND_VALIDATION.md  VERSIONING_PLAN.md  index.md
docs/adr/: 0001-use-dual-mit-or-apache-2-license.md  0002-100-percent-rust-core-policy.md  0003-evidence-cards-for-stable-public-calculations.md
docs/agent/: 00_Agentic_Addendum_Executive_Summary.md  01_Agentic_Rust_Implementation_Plan.md  02_Companion_Vector_Token_Spec.md  03_Agent_Tool_Contract.md  04_Agent_Registry_And_Retrieval.md  05_Trace_And_Replay_Spec.md  06_Agent_Safety_Policy.md  07_Work_Packages.md  08_MVP_Vertical_Slice.md  09_Crate_Map.md
docs/assurance/: astrodynamics_time_frame_tle_foundation.md  astrodynamics_tle_contract_source_policy.md  biosim_rs_atomic_transaction_commit_validation.md  biosim_rs_deterministic_replay_validation.md  biosim_rs_license_architecture.md  biosim_rs_resource_tick_validation.md  equation_inventory_readiness_dashboard.md  formula_vault_candidate_gate.md  formula_vault_candidate_verifier.md  formula_vault_runtime_resolution.md  (+26 more)
equation-batches/: README.md  a6-propulsion-heat-transfer.tsv  a9-life-support-thinfilm-pde-rom.tsv
formula-vault/: README.md
nomenclature/: MANIFEST.json
planning/: agentic_ci_gates.yaml  agentic_release_train.yaml  agentic_work_packages.csv  decision_log_agentic.md  founder_backlog_v0_001.md  implementation_backlog.md  milestones_post_v1_0.csv  milestones_v0_001_to_v1_0.csv  version_train_v0_001.yaml
scripts/: beta1_automated_gate.py  check.sh  friend_test_local.ps1  friend_test_local.sh  verify_external_m07_attitude_dynamics_control_policy_wave1.py  verify_external_m07_attitude_frame_policy_wave1.py  verify_external_m07_attitude_frame_policy_wave2.py  verify_external_m07_classifier_refresh_manual_source_review_wave1.py  verify_external_m07_coordinate_transform_frame_time_policy_wave1.py  verify_external_m07_coordinate_transform_frame_time_policy_wave2.py  verify_external_m07_cr3bp_external_data_policy_wave1.py  verify_external_m07_j2_perturbation_policy_wave1.py  verify_external_m07_j2_perturbation_policy_wave2.py  verify_external_m07_j2_perturbation_policy_wave3.py  verify_external_m07_orbital_geometry_conic_wave1.py  verify_external_m07_orbital_geometry_conic_wave10.py  verify_external_m07_orbital_geometry_conic_wave2.py  verify_external_m07_orbital_geometry_conic_wave3.py  verify_external_m07_orbital_geometry_conic_wave4.py  verify_external_m07_orbital_geometry_conic_wave5.py  verify_external_m07_orbital_geometry_conic_wave6.py  verify_external_m07_orbital_geometry_conic_wave7.py  verify_external_m07_orbital_geometry_conic_wave8.py  verify_external_m07_orbital_geometry_conic_wave9.py  verify_external_m07_relative_motion_finite_burn_policy_wave1.py  verify_external_m07_relative_motion_finite_burn_policy_wave2.py  verify_external_m07_relative_motion_finite_burn_policy_wave3.py  verify_external_m07_sgp4_teme_policy_wave1.py  verify_external_m07_solver_policy_wave1.py  verify_external_m07_solver_policy_wave2.py  verify_external_m07_solver_policy_wave3.py  verify_external_m07_two_body_algebra_wave1.py  verify_external_m07_two_body_algebra_wave2.py  verify_external_m07_unit_conversion_wave1.py  verify_external_m07_vector_helper_wave2.py  verify_formula_vault_resolutions.py  verify_governance.py
validation/: README.md  codex_card.schema.yaml  equation_inventory.tsv  evidence_levels.yaml  status_vocabulary.md  status_vocabulary.yaml
xtask/: Cargo.toml
(+139 files in other folders)
