[package]
name = "aero-codex-agent-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
aero-codex-agent-core = { path = "../aero-codex-agent-core" }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
