[package]
name = "aero-codex-heat-transfer"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false


[dependencies]
aero-codex-core = { path = "../aero-codex-core" }
aero-codex-units = { path = "../aero-codex-units" }
aero-codex-constants = { path = "../aero-codex-constants" }
[lib]
path = "src/lib.rs"
