[package]
name = "aero-codex-validation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false


[dependencies]
aero-codex-core = { path = "../aero-codex-core" }

[lib]
path = "src/lib.rs"
