[package]
name = "aero-codex"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false


[dependencies]
aero-codex-core = { path = "../aero-codex-core" }
aero-codex-units = { path = "../aero-codex-units" }
aero-codex-constants = { path = "../aero-codex-constants" }
aero-codex-numerics = { path = "../aero-codex-numerics" }
aero-codex-validation = { path = "../aero-codex-validation" }
aero-codex-data = { path = "../aero-codex-data" }
aero-codex-gasdynamics = { path = "../aero-codex-gasdynamics" }

[lib]
path = "src/lib.rs"
